# base_app

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/core/: config.py
src/core/utils/: logging_config.py
